--- a/css/styles.css
+++ b/css/styles.css
@@ -64,9 +64,9 @@ img {
     gap: 40px;
 
 }
-.header-menu-item {
+/* .header-menu-item {
     
-}
+} */
 
 .header-logo {
     font-family: "Raleway", sans-serif;
