--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,14 @@ img {
     background: #2e2f42;
     padding-top: 188px;
     padding-bottom: 188px;
+    max-width: 1200px;
+    margin: 0 auto;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url(../images/people-office\ 1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
 
     
 }
