--- a/css/styles.css
+++ b/css/styles.css
@@ -44,8 +44,10 @@ img {
 }
 
 .header {
-    border-bottom: 1px solid #e7e9fc
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
+
 .header .container {
     display: flex;
     justify-content: space-between;
@@ -91,9 +93,29 @@ img {
     color: #2e2f42;
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-menu-link:hover, .header-menu-link:focus {
+
+
+.header-menu-link.current {
+    position: relative;
+}
+
+.header-menu-link.current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+}
+
+.header-menu-link:hover, 
+.header-menu-link:focus, 
+.header-menu-link.current {
     color:#404bbf;
 }
 
@@ -110,6 +132,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
