--- a/css/styles.css
+++ b/css/styles.css
@@ -313,7 +313,6 @@ img {
     justify-content: center;
     gap: 24px;
     padding: 0 16px;
-    /* flex-direction: row; */
 }
     
 
@@ -323,24 +322,23 @@ img {
 
 }
 .soc-link {
-background-color: #4d5ae5;
-width: 40px;
-height: 40px;
-display: flex;
-align-items: center;
-justify-content: center;
-border-radius: 50%;
+    background-color: #4d5ae5;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
 
 }
 .soc-link:hover {
     background-color: #404BBF;
 }
 
-
-
 .soc-link-icon {
     fill: #f4f4fd;
-    /* padding-top: 8px; */
+    width: 16px;
+    height: 16px;
 }
 
 /* Section 4 */
@@ -371,6 +369,11 @@ border-radius: 50%;
 
 .portfolio-item {
     width: calc((100% - 48px) / 3)
+
+}
+.portfolio-item:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-image {
