--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ a {text-decoration: none;}
 button {
     cursor: pointer;
     background-color: #4D5AE5;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 button:hover, button:focus {
     background-color: #404BBF;
@@ -329,9 +330,11 @@ img {
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.soc-link:hover {
+.soc-link:hover,
+.soc-link:focus {
     background-color: #404BBF;
 }
 
@@ -368,12 +371,22 @@ img {
 }
 
 .portfolio-item {
-    width: calc((100% - 48px) / 3)
-
+    width: calc((100% - 48px) / 3);
 }
-.portfolio-item:hover {
+.portfolio-item:hover,
+.portfolio-item:focus {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.portfolio-item:hover .portfolio-item-descr {
+    transform: translateY(0);
+}
+
+.portfolio-item-img {
+    position: relative;
+    overflow: hidden;
 }
 
 .portfolio-image {
@@ -382,11 +395,22 @@ img {
     object-fit: contain;
 }
 
+.portfolio-item-descr {
+    position: absolute;
+    top: 0;
+    background-color: #4d5ae5;
+    color: #f4f4fd;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 40px 32px 164px 32px;
+    transform: translateY(100%);
+    transition: transform 250ms ease;
+}
+
 .portfolio-card {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    
     
 }
 
@@ -414,6 +438,10 @@ img {
     padding-bottom: 100px;
 }
 
+.footer-descr {
+    max-width: 300px;
+    
+}
 .footer-logo-studio {
     color: #f4f4fd;
 }
@@ -436,5 +464,57 @@ img {
     letter-spacing: 0.02em;
     color: #f4f4fd;
     max-width: 264px;
+    
 }
 
+.footer-soc-media {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    max-width: 208px;
+    margin-left: 540px;
+    /* padding-top: 100px;
+    padding-bottom: 100px; */
+
+}
+
+.soc-media-text {
+    margin-bottom: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    display: flex;
+    
+}
+
+.soc-media-list {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    list-style: none;
+    padding: 0;
+}
+
+.soc-media-item {
+    width: 40px;
+    height: 40px;
+}
+
+.soc-media-link {
+    background-color: #4d5ae5;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.soc-media-link:hover,
+.soc-media-link:focus {
+    background-color: #31d0aa;
+}
+.soc-media-icon {
+    fill: #f4f4fd;
+}
