--- a/css/styles.css
+++ b/css/styles.css
@@ -151,8 +151,7 @@ img {
     padding-bottom: 188px;
     max-width: 1440px;
     margin: 0 auto;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(../images/people-office\ 1.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -319,6 +318,7 @@ img {
 .soc-list-item {
     width: 40px;
     height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .soc-link {
@@ -339,8 +339,8 @@ img {
 
 .soc-link-icon {
     fill: #f4f4fd;
-    width: 16px;
-    height: 16px;
+    /* width: 16px;
+    height: 16px; */
 }
 
 /* Section 4 */
