--- a/css/styles.css
+++ b/css/styles.css
@@ -401,9 +401,10 @@ img {
     color: #f4f4fd;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding: 40px 32px 164px 32px;
+    padding: 40px 32px;
+    height: 100%;
     transform: translateY(100%);
-    transition: transform 250ms ease;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-card {
@@ -420,6 +421,7 @@ img {
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
+    
 }
 
 .portfolio-text {
@@ -427,7 +429,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* FOOTER */
