--- a/css/styles.css
+++ b/css/styles.css
@@ -320,7 +320,6 @@ img {
     width: 40px;
     height: 40px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 .soc-link {
     background-color: #4d5ae5;
@@ -330,7 +329,7 @@ img {
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .soc-link:hover,
@@ -340,8 +339,6 @@ img {
 
 .soc-link-icon {
     fill: #f4f4fd;
-    /* width: 16px;
-    height: 16px; */
 }
 
 /* Section 4 */
