--- a/css/styles.css
+++ b/css/styles.css
@@ -152,10 +152,10 @@ img {
     padding-bottom: 188px;
     max-width: 1440px;
     margin: 0 auto;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     
 }
 
@@ -319,7 +319,6 @@ img {
 .soc-list-item {
     width: 40px;
     height: 40px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .soc-link {
     background-color: #4d5ae5;
@@ -335,10 +334,12 @@ img {
 .soc-link:hover,
 .soc-link:focus {
     background-color: #404BBF;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .soc-link-icon {
     fill: #f4f4fd;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Section 4 */
@@ -437,7 +438,7 @@ img {
     padding-bottom: 100px;
 }
 
-.container .footer-container {
+.footer-container {
     display: flex;
     align-items: baseline;
 
@@ -445,7 +446,6 @@ img {
 
 .footer-descr {
     max-width: 300px;
-    margin-right: 120px;
 }
 .footer-logo-studio {
     color: #f4f4fd;
@@ -470,14 +470,13 @@ img {
     color: #f4f4fd;
     max-width: 264px;
     font-weight: 500;
-    
 }
 
 .footer-soc-media {
     display: flex;
     flex-direction: column;
     max-width: 208px;
-    margin-left: 540px;
+    margin-left: 120px;
 }
 
 .soc-media-text {
